<resources>
    <string name="app_name">CrypticCrossword</string>
    <string name="action_settings">Settings</string>
    <string name="squareViewTag">SquareView</string>
    <string name="keyboards">hebrew,numbers</string>
    <string name="tempMemory">tempMemory</string>
    <string name="griddler">griddler-שחור ופתור</string>
    <string name="arrowword">arrowword-תשחץ</string>
    <string name="crossword">crossword-תשבץ</string>
    <string name="sudoku">sudoku-סודוקו</string>
    <string name="gameType">gameType</string>
    <string name="boardImageUri">boardImageUri</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <array name="lettersOnly_hebrew">
        <item>language,ק,ר,א,ט,ו,פ,direction</item>
        <item>ש,ד,ג,כ,ע,י,ח,ל</item>
        <item>ז,ס,ב,ה,נ,מ,צ,ת</item>
    </array>
    <array name="lettersOnly_english">
        <item>Q,W,E,R,T,Y,U,I,O,P</item>
        <item>A,S,D,F,G,H,J,K,L, </item>
        <item>direction,Z,X,C,V,B,N,M,language, </item>
    </array>
    <array name="numbersOnly">
        <item>1,2,3,4,5</item>
        <item>6,7,8,9, </item>
    </array>
    <array name="letters">
        <item>direction,ק,ר,א,ט,ו,פ,keyboard</item>
        <item>ש,ד,ג,כ,ע,י,ח,ל</item>
        <item>ז,ס,ב,ה,נ,מ,צ,ת</item>
    </array>
    <array name="numbers">
        <item>1,2,3,4,5,keyboard</item>
        <item>6,7,8,9,0, </item>
    </array>
</resources>
