<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layoutDirection="ltr"
      android:textDirection="ltr"
      tools:context="com.liron.crypticcrossword.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shareBoard"
        android:icon="@drawable/action_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/floppy_disk"
        android:orderInCategory="2"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
</menu>
