<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liron.crypticcrossword.SelectGameActivity">

    <TextView
        android:id="@+id/sudoku"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="setGame"
        android:tag="@string/sudoku"
        android:text="sudoku"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/crossword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="setGame"
        android:tag="@string/crossword"
        android:text="crossword"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/arroword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="setGame"
        android:tag="@string/arroword"
        android:text="arroword"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/griddler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="setGame"
        android:tag="@string/griddler"
        android:text="griddler"
        android:textAlignment="center"/>
</LinearLayout>
